# AgentHub

./: .codex  .dockerignore  .gitignore  README.md  docker-compose.build.yml  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  pyrightconfig.json
agents/: README.md
agents/_template/: agent.md  agent.yaml  example-input.txt  example-response.json
agents/clause-extractor/: agent.md  agent.yaml  example-input.txt  example-response.json
agents/clause-extractor/tool/: Dockerfile  README.md  main.py  test-expected-output.json  test-input.json
agents/legal-checker/: agent.md  agent.yaml  example-input.txt  example-response.json
backend/: .env.example  .env.prod  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260408_0001_create_agent_registry.py  20260408_0002_add_agent_runs.py  20260409_0003_add_marketplace_fields.py  20260412_0004_add_demo_payments.py
backend/src/backend/: cli.py  main.py  mcp_server.py
backend/src/backend/api/routes/: agents.py  payments.py
backend/src/backend/core/: config.py
backend/src/backend/db/: __init__.py  models.py  session.py
backend/src/backend/db/queries/: __init__.py  agents.py
backend/src/backend/schemas/: agent.py  execution.py  package.py  payment.py
backend/src/backend/services/: execution.py  marketplace.py  mcp_server.py  payments.py  registry.py  tool_runtime.py
backend/tests/: test_agents_api.py  test_mcp_server.py
backend/tests/endpoints/: agents.http  mcp.http
backend/typings/jsonschema/: __init__.pyi
backend/typings/yaml/: __init__.pyi
crypto/: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
crypto/contracts/: dummy.sol
crypto/scripts/: deploy.ts  settle.ts
docker/: README.md
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docs/: AGENT_PACKAGE_CONTRACT.md  MVP_EXECUTION_PLAN.md  PROD_DOCKER_DEPLOYMENT.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/marketplace/: page.tsx
frontend/src/components/: agent-card.tsx  agent-chat-panel.tsx  copy-command-block.tsx  copy-value-field.tsx  invoke-agent-dialog.tsx  site-header.tsx
frontend/src/components/providers/: query-provider.tsx
frontend/src/components/ui/: badge.tsx  (+7 more)
frontend/src/lib/: api-client.ts  marketplace-content.ts  mock-db.ts  types.ts  validators.ts
schemas/: agent.schema.json
scripts/: README.md  load_local_agents.py  publish_images.sh
(+14 files in other folders)
