[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the AgentHub MVP registry and execution APIs"
readme = "README.md"
authors = [
    { name = "Oliver Jay", email = "oliver.tj@oliver.tj" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "jsonschema>=4.26.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[project.scripts]
backend = "backend:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
